www/angie-module-auth-spnego: Angie auth-spnego dynamic module
Module adds SPNEGO support to Angie.
It currently supports only Kerberos authentication via GSSAPI and
does not support NTLMSSP in Negotiate.

PR:		273462

--- a/www/Makefile
+++ b/www/Makefile
@@ -28,6 +28,7 @@
     SUBDIR += analog
     SUBDIR += angie
     SUBDIR += angie-module-auth-jwt
+    SUBDIR += angie-module-auth-spnego
     SUBDIR += angie-module-brotli
     SUBDIR += angie-module-cache-purge
     SUBDIR += angie-module-geoip2
