www/angie-module-enhanced-memcached: Angie enhanced memcached dynamic module
Module is to be used to obtain responses from a memcached server.
This module is based on the standard memcached module, with some additional
features. Base configuration is identical to the standard module.

PR:		273462

--- a/www/Makefile
+++ b/www/Makefile
@@ -32,6 +32,7 @@
     SUBDIR += angie-module-brotli
     SUBDIR += angie-module-cache-purge
     SUBDIR += angie-module-echo
+    SUBDIR += angie-module-enhanced-memcached
     SUBDIR += angie-module-geoip2
     SUBDIR += angie-module-image-filter
     SUBDIR += angie-module-jwt
