www/angie-module-headers-more: Angie headers-more dynamic module
Module allows to set and clear input and output headers.
This is an enhanced version of the standard headers module because it provides
more utilities like resetting or clearing "builtin headers" like Content-Type,
Content-Length, and Server.

PR:		273462

--- a/www/Makefile
+++ b/www/Makefile
@@ -35,6 +35,7 @@
     SUBDIR += angie-module-enhanced-memcached
     SUBDIR += angie-module-eval
     SUBDIR += angie-module-geoip2
+    SUBDIR += angie-module-headers-more
     SUBDIR += angie-module-image-filter
     SUBDIR += angie-module-jwt
     SUBDIR += angie-module-keyval
