www/angie-module-ndk: Angie NDK dynamic module
Module is designed to extend the Angie core functionality in a way that can be
used as a basis of other modules. It has functions and macros to deal with
generic tasks that don't currently have generic code as part of the core
distribution.

PR:		273462

--- a/www/Makefile
+++ b/www/Makefile
@@ -39,6 +39,7 @@
     SUBDIR += angie-module-image-filter
     SUBDIR += angie-module-jwt
     SUBDIR += angie-module-keyval
+    SUBDIR += angie-module-ndk
     SUBDIR += angie-module-njs
     SUBDIR += angie-module-perl
     SUBDIR += angie-module-redis2
