www/angie-module-rtmp: Angie RTMP dynamic module
Module provides HLS and MPEG-DASH live streaming capabilities for those who
want a lightweight solution based on the HTTP protocol.
The stream is published in the MPEG-TS format over HTTP.
MPEG-TS is a widely adopted, well known and well documented streaming format.

PR:		273462

--- a/www/Makefile
+++ b/www/Makefile
@@ -44,6 +44,7 @@
     SUBDIR += angie-module-perl
     SUBDIR += angie-module-postgres
     SUBDIR += angie-module-redis2
+    SUBDIR += angie-module-rtmp
     SUBDIR += angie-module-xslt
     SUBDIR += anyremote2html
     SUBDIR += apache-mode.el
