www/angie-module-subs: Angie substitutions filter dynamic module
Module performs both regular expression and fixed string substitutions
on response bodies. This module is quite different from the native
substitution module. It scans the output chains buffer and matches string
line by line, just like Apache's mod_substitute.

PR:		273462

--- a/www/Makefile
+++ b/www/Makefile
@@ -46,6 +46,7 @@
     SUBDIR += angie-module-redis2
     SUBDIR += angie-module-rtmp
     SUBDIR += angie-module-set-misc
+    SUBDIR += angie-module-subs
     SUBDIR += angie-module-xslt
     SUBDIR += anyremote2html
     SUBDIR += apache-mode.el
