www/angie-module-upload: Angie upload dynamic module
Module parses request body storing all files being uploaded to a directory.
The files are then being stripped from body and altered request is then passed
to a location specified by upload_pass directive, thus allowing arbitrary
handling of uploaded files.

PR:		273462

--- a/www/Makefile
+++ b/www/Makefile
@@ -47,6 +47,7 @@
     SUBDIR += angie-module-rtmp
     SUBDIR += angie-module-set-misc
     SUBDIR += angie-module-subs
+    SUBDIR += angie-module-upload
     SUBDIR += angie-module-xslt
     SUBDIR += anyremote2html
     SUBDIR += apache-mode.el
