--- a/www/Makefile
+++ b/www/Makefile
@@ -48,6 +48,7 @@
     SUBDIR += angie-module-set-misc
     SUBDIR += angie-module-subs
     SUBDIR += angie-module-upload
+    SUBDIR += angie-module-vod
     SUBDIR += angie-module-xslt
     SUBDIR += anyremote2html
     SUBDIR += apache-mode.el
