--- a/www/gitlab-ce/Makefile
+++ b/www/gitlab-ce/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	gitlab-ce
-PORTVERSION=	16.1.5
+PORTVERSION=	16.3.0
 DISTVERSIONPREFIX=	v
 PORTREVISION=	1
 CATEGORIES=	www devel
@@ -18,13 +18,13 @@ LICENSE_FILE=	${WRKSRC}/LICENSE
 # mail/rubygem-net-smtp is required as ruby 3.1 removed it
 # textproc/rubygem-psych3 is required as ruby 3.1 applied an update to psych 4.0 which has breaking changes
 # mail/rubygem-net-pop is required as ruby 3.1 removed it
-MY_DEPENDS=	git>=2.39.2:devel/git \
+MY_DEPENDS=	git>=2.41.0:devel/git \
 	gitaly>=${PORTVERSION}:devel/gitaly \
-	gitlab-elasticsearch-indexer>=4.3.5:textproc/gitlab-elasticsearch-indexer \
-	gitlab-agent>=16.1.3:net/gitlab-agent \
+	gitlab-elasticsearch-indexer>=4.3.8:textproc/gitlab-elasticsearch-indexer \
+	gitlab-agent>=16.3.0:net/gitlab-agent \
 	gitlab-metrics-exporter>0:devel/gitlab-metrics-exporter \
 	gitlab-pages>=${PORTVERSION}:www/gitlab-pages \
-	gitlab-shell>=14.23.0:devel/gitlab-shell \
+	gitlab-shell>=14.26.0:devel/gitlab-shell \
 	gitlab-workhorse>=${PORTVERSION}:www/gitlab-workhorse \
 	redis>=6.2.11:databases/redis \
 	yarn${NODEJS_SUFFIX}>=1.10.0:www/yarn${NODEJS_SUFFIX} \
@@ -33,23 +33,23 @@ MY_DEPENDS=	git>=2.39.2:devel/git \
 	rubygem-net-smtp>=0:mail/rubygem-net-smtp \
 	rubygem-net-pop>=0:mail/rubygem-net-pop \
 	rubygem-psych3>=3.1<4:textproc/rubygem-psych3 \
-	rubygem-rails61>=6.1.7.2<6.1.8:www/rubygem-rails61 \
+	rubygem-rails70>=7.0.6<7.1:www/rubygem-rails70 \
 	rubygem-bootsnap>=1.16.0<1.17:devel/rubygem-bootsnap \
 	rubygem-openssl>=3.0<4:security/rubygem-openssl \
 	rubygem-ipaddr>=1.2.5<1.3:net/rubygem-ipaddr \
-	rubygem-responders-rails61>=3.0<4.0:www/rubygem-responders-rails61 \
+	rubygem-responders-rails70>=3.0<4.0:www/rubygem-responders-rails70 \
 	rubygem-sprockets3>=3.7<3.8:devel/rubygem-sprockets3 \
-	rubygem-view_component-rails61>=3.2.0<3.3:devel/rubygem-view_component-rails61 \
+	rubygem-view_component-rails70>=3.2.0<3.3:devel/rubygem-view_component-rails70 \
 	rubygem-pg>=1.5.3<1.6:databases/rubygem-pg \
 	rubygem-neighbor>=0.2.3<0.3:databases/rubygem-neighbor \
-	rubygem-rugged>=1.5<2:devel/rubygem-rugged \
+	rubygem-rugged>=1.6<2:devel/rubygem-rugged \
 	rubygem-grape-path-helpers>=1.7.1<1.8:devel/rubygem-grape-path-helpers \
 	rubygem-faraday1>=1.10.0<3:www/rubygem-faraday1 \
 	rubygem-marginalia>=1.11.1<1.12:databases/rubygem-marginalia \
 	rubygem-declarative_policy>=1.1.0<1.2:security/rubygem-declarative_policy \
-	rubygem-devise-rails61>=4.8.1<4.9:devel/rubygem-devise-rails61 \
+	rubygem-devise48-rails70>=4.8.1<4.9:devel/rubygem-devise48-rails70 \
 	rubygem-bcrypt>=3.1.14<3.2:security/rubygem-bcrypt \
-	rubygem-doorkeeper>=5.6.6<6:security/rubygem-doorkeeper \
+	rubygem-doorkeeper-rails70>=5.6.6<6:security/rubygem-doorkeeper-rails70 \
 	rubygem-doorkeeper-openid_connect>=1.8.7<2:security/rubygem-doorkeeper-openid_connect \
 	rubygem-rexml>=3.2.5<3.3:textproc/rubygem-rexml \
 	rubygem-ruby-saml>=1.15.0<1.16:security/rubygem-ruby-saml \
@@ -74,7 +74,7 @@ MY_DEPENDS=	git>=2.39.2:devel/git \
 	rubygem-recaptcha>=5.12<6.0:devel/rubygem-recaptcha \
 	rubygem-akismet>=3.0<4.0:devel/rubygem-akismet \
 	rubygem-invisible_captcha>=2.0.0<2.1.0:graphics/rubygem-invisible_captcha \
-	rubygem-devise-two-factor-rails61>=4.0.2<4.1:security/rubygem-devise-two-factor-rails61 \
+	rubygem-devise-two-factor40-rails70>=4.0.2<4.1:security/rubygem-devise-two-factor40-rails70 \
 	rubygem-rqrcode-rails3>=0.1.7<0.2.0:www/rubygem-rqrcode-rails3 \
 	rubygem-validates_hostname>=1.0.11<1.1.0:dns/rubygem-validates_hostname \
 	rubygem-rubyzip>=2.3.2<2.4:archivers/rubygem-rubyzip \
@@ -83,7 +83,7 @@ MY_DEPENDS=	git>=2.39.2:devel/git \
 	rubygem-ohai17>=17.9<18:sysutils/rubygem-ohai17 \
 	rubygem-gpgme>=2.0.22<2.1.0:security/rubygem-gpgme \
 	rubygem-gitlab_omniauth-ldap>=2.2.0<2.3.0:net/rubygem-gitlab_omniauth-ldap \
-	rubygem-net-ldap>=0.18.0<0.19:net/rubygem-net-ldap \
+	rubygem-net-ldap017>=0.17.1<0.18:net/rubygem-net-ldap017 \
 	rubygem-grape17>=1.7.0<1.8:devel/rubygem-grape17 \
 	rubygem-grape-entity>=0.10.0<0.11.0,1:devel/rubygem-grape-entity \
 	rubygem-rack-cors>=1.1.1<1.2.0:www/rubygem-rack-cors \
@@ -94,8 +94,9 @@ MY_DEPENDS=	git>=2.39.2:devel/git \
 	rubygem-apollo_upload_server>=2.1.0<2.2:net/rubygem-apollo_upload_server \
 	rubygem-graphql-docs>=2.1.0<2.2.0:devel/rubygem-graphql-docs \
 	rubygem-graphlient>=0.5.0<0.6:devel/rubygem-graphlient \
+	rubygem-ffaker>=2.10<3:devel/rubygem-ffaker \
 	rubygem-hashie>=5.0.0<5.1:devel/rubygem-hashie \
-	rubygem-kaminari-rails61>=1.2.2<1.3:www/rubygem-kaminari-rails61 \
+	rubygem-kaminari-rails70>=1.2.2<1.3:www/rubygem-kaminari-rails70 \
 	rubygem-hamlit>=2.15.0<2.16:www/rubygem-hamlit \
 	rubygem-carrierwave>=1.3.2<2.0:www/rubygem-carrierwave \
 	rubygem-mini_magick410>=4.10.1<4.11:graphics/rubygem-mini_magick410 \
@@ -104,7 +105,7 @@ MY_DEPENDS=	git>=2.39.2:devel/git \
 	rubygem-fog-google>=1.19<2:net/rubygem-fog-google \
 	rubygem-fog-local>=0.8<1.0:net/rubygem-fog-local \
 	rubygem-fog-aliyun>=0.4<1.0:net/rubygem-fog-aliyun \
-	rubygem-gitlab-fog-azure-rm>=1.7.0<1.8:net/rubygem-gitlab-fog-azure-rm \
+	rubygem-gitlab-fog-azure-rm>=1.8.0<1.9:net/rubygem-gitlab-fog-azure-rm \
 	rubygem-google-cloud-storage>=1.44.0<1.45:net/rubygem-google-cloud-storage \
 	rubygem-google-apis-core>=0.10.0<0.12:devel/rubygem-google-apis-core \
 	rubygem-google-apis-compute_v1_057>=0.57.0<0.58:devel/rubygem-google-apis-compute_v1_057 \
@@ -121,15 +122,15 @@ MY_DEPENDS=	git>=2.39.2:devel/git \
 	rubygem-elasticsearch-model713>=7.2<8:textproc/rubygem-elasticsearch-model713 \
 	rubygem-elasticsearch-rails>=7.2<8:textproc/rubygem-elasticsearch-rails \
 	rubygem-elasticsearch-api713>=7.13.3<7.13.4:textproc/rubygem-elasticsearch-api713 \
-	rubygem-aws-sdk-core3175>=3.175.0<3.176:devel/rubygem-aws-sdk-core3175 \
+	rubygem-aws-sdk-core>=3.180.3<4:devel/rubygem-aws-sdk-core \
 	rubygem-aws-sdk-cloudformation>=1<2:devel/rubygem-aws-sdk-cloudformation \
-	rubygem-aws-sdk-s31126>=1.126.0<1.127:devel/rubygem-aws-sdk-s31126 \
+	rubygem-aws-sdk-s3>=1.132.1<2:devel/rubygem-aws-sdk-s3 \
 	rubygem-faraday_middleware-aws-sigv403>=0.3.0<0.4:devel/rubygem-faraday_middleware-aws-sigv403 \
 	rubygem-typhoeus>=1.4.0<1.5:www/rubygem-typhoeus \
 	rubygem-html-pipeline>=2.14.3<2.15:textproc/rubygem-html-pipeline \
 	rubygem-deckar01-task_list>=2.3.2<2.4:www/rubygem-deckar01-task_list \
 	rubygem-gitlab-markup>=1.9.0<1.10.0:textproc/rubygem-gitlab-markup \
-	rubygem-commonmarker>=0.23.10<0.24:textproc/rubygem-commonmarker \
+	rubygem-commonmarker>=0.23.9<0.24:textproc/rubygem-commonmarker \
 	rubygem-kramdown23>=2.3.1<2.4:textproc/rubygem-kramdown23 \
 	rubygem-redcloth>=4.3.2<4.4.0:www/rubygem-redcloth \
 	rubygem-rdoc63>=6.3.2<7:devel/rubygem-rdoc63 \
@@ -140,13 +141,13 @@ MY_DEPENDS=	git>=2.39.2:devel/git \
 	rubygem-asciidoctor-include-ext>=0.4.0<0.5.0:textproc/rubygem-asciidoctor-include-ext \
 	rubygem-asciidoctor-plantuml00>=0.0.16<0.1:textproc/rubygem-asciidoctor-plantuml00 \
 	rubygem-asciidoctor-kroki>=0.8.0<0.9:textproc/rubygem-asciidoctor-kroki \
-	rubygem-rouge>=4.1.2<4.2:textproc/rubygem-rouge \
+	rubygem-rouge>=4.1.3<4.2:textproc/rubygem-rouge \
 	rubygem-truncato>=0.7.11<0.8.0:textproc/rubygem-truncato \
-	rubygem-nokogiri>=1.15.2<2:textproc/rubygem-nokogiri \
+	rubygem-nokogiri>=1.15.4<2:textproc/rubygem-nokogiri \
 	rubygem-icalendar>=0:devel/rubygem-icalendar \
 	rubygem-diffy>=3.4<4:textproc/rubygem-diffy \
 	rubygem-diff_match_patch>=0.1.0<0.2.0:textproc/rubygem-diff_match_patch \
-	rubygem-rack22>=2.2.7,3<2.3,3:www/rubygem-rack22 \
+	rubygem-rack22>=2.2.8,3<2.3,3:www/rubygem-rack22 \
 	rubygem-rack-timeout>=0.6.3<0.7:www/rubygem-rack-timeout \
 	rubygem-puma>=6.3<7:www/rubygem-puma \
 	rubygem-sd_notify>=0.1.1<0.2:devel/rubygem-sd_notify \
@@ -159,14 +160,14 @@ MY_DEPENDS=	git>=2.39.2:devel/git \
 	rubygem-httparty020>=0.20.0<0.21:www/rubygem-httparty020 \
 	rubygem-rainbow>=3.1.1<4.0:devel/rubygem-rainbow \
 	rubygem-ruby-progressbar>=1.11<2:devel/rubygem-ruby-progressbar \
-	rubygem-re2>=1.6.0<1.7.0:devel/rubygem-re2 \
+	rubygem-re2>=1.7.0<1.8.0:devel/rubygem-re2 \
 	rubygem-semver_dialects>=1.2.1<1.3:devel/rubygem-semver_dialects \
 	rubygem-version_sorter>=2.3<3:textproc/rubygem-version_sorter \
 	rubygem-js_regex>=3.8<4.0:textproc/rubygem-js_regex \
 	rubygem-device_detector>=0:devel/rubygem-device_detector \
 	rubygem-redis4>=4.8.0<4.8.2:databases/rubygem-redis4 \
 	rubygem-connection_pool>=2.2.5<3.0:net/rubygem-connection_pool \
-	rubygem-redis-actionpack-rails61>=5.3.0<5.4:databases/rubygem-redis-actionpack-rails61 \
+	rubygem-redis-actionpack-rails70>=5.3.0<5.4:databases/rubygem-redis-actionpack-rails70 \
 	rubygem-discordrb-webhooks>=3.4<4.0:net-im/rubygem-discordrb-webhooks \
 	rubygem-jira-ruby21>=2.1.4<2.2:devel/rubygem-jira-ruby21 \
 	rubygem-atlassian-jwt>=0.2.0<0.3.0:www/rubygem-atlassian-jwt \
@@ -187,37 +188,38 @@ MY_DEPENDS=	git>=2.39.2:devel/git \
 	rubygem-gitlab-chronic>=0.10.5<0.11.0:devel/rubygem-gitlab-chronic \
 	rubygem-gitlab_chronic_duration>=0.10.6.2<0.10.7:devel/rubygem-gitlab_chronic_duration \
 	rubygem-rack-proxy>=0.7.6<0.8.0:www/rubygem-rack-proxy \
-	rubygem-sassc-rails-rails61>=2.1.0<2.2.0:textproc/rubygem-sassc-rails-rails61 \
+	rubygem-sassc-rails-rails70>=2.1.0<2.2.0:textproc/rubygem-sassc-rails-rails70 \
 	rubygem-autoprefixer-rails1025>=10.2.5.1<10.2.6:textproc/rubygem-autoprefixer-rails1025 \
 	rubygem-terser>=1.0.2:textproc/rubygem-terser \
 	rubygem-addressable>=2.8<3:www/rubygem-addressable \
 	rubygem-tanuki_emoji>=0.6<1:graphics/rubygem-tanuki_emoji \
-	rubygem-gon-rails61>=6.4.0<6.5:www/rubygem-gon-rails61 \
+	rubygem-gon-rails70>=6.4.0<6.5:www/rubygem-gon-rails70 \
 	rubygem-request_store>=1.5.1<2.0:devel/rubygem-request_store \
 	rubygem-base32>=0.3.0<0.4.0:converters/rubygem-base32 \
 	rubygem-gitlab-license>=2.3<3:devel/rubygem-gitlab-license \
-	rubygem-rack-attack>=6.6.1<6.7:www/rubygem-rack-attack \
+	rubygem-rack-attack>=6.7.0<6.8:www/rubygem-rack-attack \
 	rubygem-sentry-raven>=3.1<4.0:devel/rubygem-sentry-raven \
 	rubygem-sentry-ruby>=5.8.0<5.9:devel/rubygem-sentry-ruby \
 	rubygem-sentry-rails>=5.8.0<5.9:devel/rubygem-sentry-rails \
 	rubygem-sentry-sidekiq>=5.8.0<5.9:devel/rubygem-sentry-sidekiq \
-	rubygem-pg_query>=4.2.1<4.3:databases/rubygem-pg_query \
-	rubygem-premailer-rails-rails61>=1.10.3<1.11:mail/rubygem-premailer-rails-rails61 \
-	rubygem-gitlab-labkit>=0.33.0<0.34:devel/rubygem-gitlab-labkit \
+	rubygem-pg_query>=4.2.3<4.3:databases/rubygem-pg_query \
+	rubygem-premailer-rails-rails70>=1.10.3<1.11:mail/rubygem-premailer-rails-rails70 \
+	rubygem-gitlab-labkit>=0.34.0<0.35:devel/rubygem-gitlab-labkit \
 	rubygem-thrift>=0.16.0:devel/rubygem-thrift \
 	rubygem-ruby_parser>=3.20<4.0:devel/rubygem-ruby_parser \
-	rubygem-rails-i18n-rails61>=7.0<8:devel/rubygem-rails-i18n-rails61 \
-	rubygem-gettext_i18n_rails18>=1.8.0<1.9.0:devel/rubygem-gettext_i18n_rails18 \
-	rubygem-gettext_i18n_rails_js-rails61>=1.3<2.0:devel/rubygem-gettext_i18n_rails_js-rails61 \
+	rubygem-rails-i18n-rails70>=7.0<8:devel/rubygem-rails-i18n-rails70 \
+	rubygem-gettext_i18n_rails111>=1.11.0<1.12.0:devel/rubygem-gettext_i18n_rails111 \
+	rubygem-gettext_i18n_rails_js-rails70>=1.3<2.0:devel/rubygem-gettext_i18n_rails_js-rails70 \
 	rubygem-gettext>=3.3<4:devel/rubygem-gettext \
 	rubygem-batch-loader>=2.0.1<2.1:devel/rubygem-batch-loader \
-	rubygem-peek-rails61>=1.1.0<2.0:devel/rubygem-peek-rails61 \
+	rubygem-peek-rails70>=1.1.0<2.0:devel/rubygem-peek-rails70 \
 	rubygem-snowplow-tracker>=0.8.0<1:devel/rubygem-snowplow-tracker \
 	rubygem-webrick>=1.8.1<1.9:www/rubygem-webrick \
-	rubygem-prometheus-client-mmap>=0.25<0.26:devel/rubygem-prometheus-client-mmap \
+	rubygem-prometheus-client-mmap>=0.27<0.28:devel/rubygem-prometheus-client-mmap \
 	rubygem-warning>=1.3.0<1.4:devel/rubygem-warning \
 	rubygem-license_finder>=7.0.0<8:devel/rubygem-license_finder \
-	rubygem-gitlab-dangerfiles>=3.10.0<3.11:devel/rubygem-gitlab-dangerfiles \
+	rubygem-gitlab-dangerfiles>=3.13.0<3.14:devel/rubygem-gitlab-dangerfiles \
+	rubygem-rspec>=3.0<4:devel/rubygem-rspec \
 	rubygem-octokit5>=4.20<6.0:net/rubygem-octokit5 \
 	rubygem-gitlab-mail_room>=0.0.23<0.1.0:mail/rubygem-gitlab-mail_room \
 	rubygem-email_reply_trimmer>=0.1<1.0:mail/rubygem-email_reply_trimmer \
@@ -228,23 +230,23 @@ MY_DEPENDS=	git>=2.39.2:devel/git \
 	rubygem-benchmark-memory>=0.1<1.0:benchmarks/rubygem-benchmark-memory \
 	rubygem-activerecord-explain-analyze>=0.1<1.0:databases/rubygem-activerecord-explain-analyze \
 	rubygem-oauth2>=2.0<3:net/rubygem-oauth2 \
-	rubygem-health_check>=3.0<4:devel/rubygem-health_check \
+	rubygem-health_check-rails70>=3.0<4:devel/rubygem-health_check-rails70 \
 	rubygem-vmstat>=2.3.0<2.4.0:sysutils/rubygem-vmstat \
 	rubygem-sys-filesystem>=1.4.3<1.5:sysutils/rubygem-sys-filesystem \
 	rubygem-net-ntp>0:net/rubygem-net-ntp \
 	rubygem-ssh_data>=1.3<2:security/rubygem-ssh_data \
 	rubygem-spamcheck>=1.3.0<1.4:net/rubygem-spamcheck \
-	rubygem-gitaly>=16.1.0.pre.rc2<16.2.0:net/rubygem-gitaly \
-	rubygem-kas-grpc>=0.1.0,1<0.2.0,1:net/rubygem-kas-grpc \
-	rubygem-grpc>=1.42.0<2:net/rubygem-grpc \
-	rubygem-google-protobuf323>=3.23.3<4:devel/rubygem-google-protobuf323 \
+	rubygem-gitaly>=16.2.0.pre.rc4<16.3.0:net/rubygem-gitaly \
+	rubygem-kas-grpc>=0.2.0,1<0.3.0,1:net/rubygem-kas-grpc \
+	rubygem-grpc>=1.55.0<2:net/rubygem-grpc \
+	rubygem-google-protobuf323>=3.23.4<4:devel/rubygem-google-protobuf323 \
 	rubygem-toml-rb>=2.2.0<3:www/rubygem-toml-rb \
 	rubygem-flipper025>=0.25.0<0.26:devel/rubygem-flipper025 \
-	rubygem-flipper-active_record-rails61>=0.25.0<0.26:databases/rubygem-flipper-active_record-rails61 \
-	rubygem-flipper-active_support_cache_store-rails61>=0.25.0<0.26:devel/rubygem-flipper-active_support_cache_store-rails61 \
+	rubygem-flipper-active_record-rails70>=0.25.0<0.26:databases/rubygem-flipper-active_record-rails70 \
+	rubygem-flipper-active_support_cache_store-rails70>=0.25.0<0.26:devel/rubygem-flipper-active_support_cache_store-rails70 \
 	rubygem-unleash>=3.2.2<3.3:devel/rubygem-unleash \
 	rubygem-gitlab-experiment>=0.7.0<0.8:devel/rubygem-gitlab-experiment \
-	rubygem-lograge-rails61>=0.11.2<1.0:www/rubygem-lograge-rails61 \
+	rubygem-lograge-rails70>=0.11.2<1.0:www/rubygem-lograge-rails70 \
 	rubygem-grape_logging>=1.8<2.0:devel/rubygem-grape_logging \
 	rubygem-gitlab-net-dns>=0.9.2<0.10:dns/rubygem-gitlab-net-dns \
 	rubygem-countries>=4.1.3<4.2.0:devel/rubygem-countries \
@@ -253,6 +255,7 @@ MY_DEPENDS=	git>=2.39.2:devel/git \
 	rubygem-mail>=2.8.1<2.8.2,2:mail/rubygem-mail \
 	rubygem-lockbox>=1.1.1<1.2:security/rubygem-lockbox \
 	rubygem-valid_email>=0.1<1:mail/rubygem-valid_email \
+	rubygem-jsonb_accessor>=1.3.10<1.4:www/rubygem-jsonb_accessor \
 	rubygem-json>=2.6.3<3:devel/rubygem-json \
 	rubygem-json_schemer>=0.2.18<0.3:devel/rubygem-json_schemer \
 	rubygem-oj313>=3.13.21<3.14:devel/rubygem-oj313 \
@@ -266,7 +269,7 @@ MY_DEPENDS=	git>=2.39.2:devel/git \
 	rubygem-parser>=0:devel/rubygem-parser \
 	rubygem-cvss-suite>=3.0.1<3.1:security/rubygem-cvss-suite \
 	rubygem-arr-pm>=0.0.12<0.1:devel/rubygem-arr-pm \
-	rubygem-devfile>=0.0.19.p.a1<0.0.20:net/rubygem-devfile \
+	rubygem-devfile>=0.0.22.p.a1<0.0.23:net/rubygem-devfile \
 	rubygem-CFPropertyList>=3.0.0<3.1:devel/rubygem-CFPropertyList \
 	rubygem-app_store_connect>=0:net/rubygem-app_store_connect \
 	rubygem-telesignenterprise>=2.2<3:devel/rubygem-telesignenterprise \
@@ -424,6 +427,7 @@ post-install:
 	@${ECHO_CMD} "@dir(,,700) ${WWWDIR_REL}/shared/artifacts/tmp/cache" >> ${TMPPLIST}
 	@${ECHO_CMD} "@dir(,,700) ${WWWDIR_REL}/shared/artifacts/tmp/uploads" >> ${TMPPLIST}
 	@${ECHO_CMD} "@dir(,,700) ${WWWDIR_REL}/shared/artifacts/tmp/work" >> ${TMPPLIST}
+	@${ECHO_CMD} "@dir(,,700) ${WWWDIR_REL}/shared/ci_secure_files" >> ${TMPPLIST}
 	@${ECHO_CMD} "@dir(,,770) ${WWWDIR_REL}/shared/packages" >> ${TMPPLIST}
 	@${ECHO_CMD} "@group gitlab-pages" >> ${TMPPLIST}
 	@${ECHO_CMD} "@dir(,,770) ${WWWDIR_REL}/shared/pages" >> ${TMPPLIST}
