devel/p5-MooseX-Test-Role: Add p5-MooseX-Test-Role 0.08
MooseX::Test::Role provides functions for testing roles. It supports roles
created with Moose::Role, Moo::Role or Role::Tiny.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -2996,6 +2996,7 @@
     SUBDIR += p5-MooseX-Singleton
     SUBDIR += p5-MooseX-Storage
     SUBDIR += p5-MooseX-StrictConstructor
+    SUBDIR += p5-MooseX-Test-Role
     SUBDIR += p5-MooseX-TraitFor-Meta-Class-BetterAnonClassNames
     SUBDIR += p5-MooseX-Traits
     SUBDIR += p5-MooseX-Traits-Pluggable
