--- a/sysutils/ncdu2/Makefile
+++ b/sysutils/ncdu2/Makefile
@@ -27,7 +27,9 @@ do-build:
 	cd ${WRKSRC} && ${SETENV} ${MAKE_ENV} zig build ${BUILD_ARGS}
 
 do-install:
+.if !defined(WITH_DEBUG)
 	/usr/bin/llvm-strip ${STAGEDIR}${PREFIX}/bin/ncdu
+.endif
 	${MV} ${STAGEDIR}${PREFIX}/bin/ncdu ${STAGEDIR}${PREFIX}/bin/ncdu2
 	${INSTALL_MAN} ${WRKSRC}/ncdu.1 ${STAGEDIR}${PREFIX}/share/man/man1/ncdu2.1
 
