graphics/mesa-devel: update to 23.2.0.b.3179
Changes:	https://gitlab.freedesktop.org/mesa/mesa/-/compare/1ae3c40732e...7876a2f6853

--- a/graphics/mesa-devel/Makefile
+++ b/graphics/mesa-devel/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	mesa
-DISTVERSION=	23.2.0-branchpoint-3137
-DISTVERSIONSUFFIX=	-g1ae3c40732e
+DISTVERSION=	23.2.0-branchpoint-3179
+DISTVERSIONSUFFIX=	-g7876a2f6853
 CATEGORIES=	graphics
 PKGNAMESUFFIX=	-devel
 
