devel/rubygem-aws-sdk-neptunedata: Add rubygem-aws-sdk-neptunedata 1.0.0
Official AWS Ruby gem for Amazon Neptune Data.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -6305,6 +6305,7 @@
     SUBDIR += rubygem-aws-sdk-mturk
     SUBDIR += rubygem-aws-sdk-mwaa
     SUBDIR += rubygem-aws-sdk-neptune
+    SUBDIR += rubygem-aws-sdk-neptunedata
     SUBDIR += rubygem-aws-sdk-networkfirewall
     SUBDIR += rubygem-aws-sdk-networkmanager
     SUBDIR += rubygem-aws-sdk-nimblestudio
