devel/rubygem-bcp47_spec: Add rubygem-bcp47_spec 0.2.1
bcp47_spec provides a subset of the BCP 47 specification
(https://www.rfc-editor.org/info/bcp47).

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -6582,6 +6582,7 @@
     SUBDIR += rubygem-bacon
     SUBDIR += rubygem-baf
     SUBDIR += rubygem-batch-loader
+    SUBDIR += rubygem-bcp47_spec
     SUBDIR += rubygem-benelux
     SUBDIR += rubygem-better_html-rails61
     SUBDIR += rubygem-bin_utils
