devel/rubygem-grape17: Add rubygem-grape17 1.7.1 (copied from rubygem-grape)
- Add PORTSCOUT

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -6895,6 +6895,7 @@
     SUBDIR += rubygem-grape-route-helpers
     SUBDIR += rubygem-grape-swagger
     SUBDIR += rubygem-grape-swagger-entity
+    SUBDIR += rubygem-grape17
     SUBDIR += rubygem-grape_logging
     SUBDIR += rubygem-graphiql-rails
     SUBDIR += rubygem-graphlient
