textproc/rubygem-elastic-apm: Add rubygem-elastic-apm 4.7.0
elastic-apm provides Elastic APM (Application Performance Monitoring) agent for
Ruby.

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1738,6 +1738,7 @@
     SUBDIR += rubygem-diff_match_patch
     SUBDIR += rubygem-diffy
     SUBDIR += rubygem-docdiff
+    SUBDIR += rubygem-elastic-apm
     SUBDIR += rubygem-elastic-transport
     SUBDIR += rubygem-elasticsearch
     SUBDIR += rubygem-elasticsearch-api
