sysutils/ncdu2: Use zig built-in strip instead of llvm-strip
- Bump PORTREVISION for package change

zig built-in strip generates smaller binary executables than llvm-strip.

--- a/sysutils/ncdu2/Makefile
+++ b/sysutils/ncdu2/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	ncdu
 PORTVERSION=	2.2.2
-PORTREVISION=	3
+PORTREVISION=	4
 CATEGORIES=	sysutils
 MASTER_SITES=	https://dev.yorhel.nl/download/
 PKGNAMESUFFIX=	2
@@ -17,7 +17,7 @@ BUILD_DEPENDS=	zig>=0.10.0<0.10.1_99:lang/zig
 
 USES=		ncurses
 
-BUILD_ARGS=	--prefix "${PREFIX}" --verbose
+BUILD_ARGS=	--prefix "${PREFIX}" --verbose ${STRIP:C|.+|-Dstrip|}
 MAKE_ENV=	DESTDIR="${STAGEDIR}"
 
 PLIST_FILES=	bin/ncdu2 \
@@ -27,9 +27,6 @@ do-build:
 	cd ${WRKSRC} && ${SETENV} ${MAKE_ENV} zig build ${BUILD_ARGS}
 
 do-install:
-.if !defined(WITH_DEBUG)
-	/usr/bin/llvm-strip ${STAGEDIR}${PREFIX}/bin/ncdu
-.endif
 	${MV} ${STAGEDIR}${PREFIX}/bin/ncdu ${STAGEDIR}${PREFIX}/bin/ncdu2
 	${INSTALL_MAN} ${WRKSRC}/ncdu.1 ${STAGEDIR}${PREFIX}/share/man/man1/ncdu2.1
 
