devel/matreshka: revive port
Restore Matreshka Project, partially, the i386 build is running out of
stack space and failing.

 * port{clippy,fmt,lint} maintenance
 * switch to new home https://github.com/godunko/matreshka
 * update to 21.0

PR:		273241

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1571,6 +1571,7 @@
     SUBDIR += marl
     SUBDIR += massif-visualizer
     SUBDIR += mate-common
+    SUBDIR += matreshka
     SUBDIR += maven
     SUBDIR += maven-wrapper
     SUBDIR += maven39
