www/suitecrm: Add new port
SuiteCRM is an open source Customer Relationship Management (CRM)
software solution that provides a 360-degree view of your customers
and business.

--- a/www/Makefile
+++ b/www/Makefile
@@ -2298,6 +2298,7 @@
     SUBDIR += stagit
     SUBDIR += stork
     SUBDIR += subsonic-standalone
+    SUBDIR += suitecrm
     SUBDIR += suphp
     SUBDIR += surf
     SUBDIR += swiggle
