graphics/mesa-dri: always enable EGL
Don't disable EGL when building Mesa for the hybrid ABI. In such case,
no DRI drivers are compiled, including those we're interested in, e.g.
the Panfrost driver.

Also, Mesa enables EGL by default when some DRI driver is required so we
don't need to enable it with a flag.

--- a/graphics/mesa-dri/Makefile
+++ b/graphics/mesa-dri/Makefile
@@ -83,10 +83,8 @@ MESON_ARGS+=	-Dgallium-xa=disabled \
 		-Dosmesa=false
 
 .if ${ABI:Mpurecap}
-MESON_ARGS+=	-Degl=enabled \
-		-Dllvm=disabled
+MESON_ARGS+=	-Dllvm=disabled
 .else
-MESON_ARGS+=	-Degl=disabled
 LIB_DEPENDS+=	libLLVM-${LLVM_DEFAULT}.so:devel/llvm${LLVM_DEFAULT}
 .endif
 
