graphics/mesa-dri: don't use Zstandard for CheriABI
Mesa crashes with a capability exception when using Zstandard. We should
debug this issue independently of the release.

--- a/graphics/mesa-dri/Makefile
+++ b/graphics/mesa-dri/Makefile
@@ -17,6 +17,7 @@ PLATFORM_WAYLAND_IMPLIES=	WAYLAND
 OPTIONS_DEFINE=		WAYLAND ZSTD
 OPTIONS_DEFAULT=	WAYLAND PLATFORM_X11 PLATFORM_WAYLAND ZSTD
 OPTIONS_SUB=		yes
+OPTIONS_EXCLUDE_purecap=ZSTD
 
 WAYLAND_DESC=		Enable support for the Wayland platform in Vulkan drivers
 WAYLAND_BUILD_DEPENDS=	wayland-protocols>=1.8:graphics/wayland-protocols
