www/chromium: update files to patch LOCALBASE
third_party/wayland/features.gni is no longer patched as Chromium tries
to detect a path to wayland-scanner rather than hardcode its path.

However, a patch for third_party/wayland/BUILD.gn was added in FreeBSD
ports to find libepoll-shim header files.

--- a/www/chromium/Makefile
+++ b/www/chromium/Makefile
@@ -315,7 +315,7 @@ post-patch:
 	    ${WRKSRC}/third_party/test_fonts/fontconfig/BUILD.gn \
 	    ${WRKSRC}/third_party/vulkan-deps/vulkan-loader/src/BUILD.gn \
 	    ${WRKSRC}/third_party/vulkan-deps/vulkan-loader/src/loader/vk_loader_platform.h \
-	    ${WRKSRC}/third_party/wayland/features.gni
+	    ${WRKSRC}/third_party/wayland/BUILD.gn
 
 do-install:
 	@${MKDIR} ${STAGEDIR}${DATADIR}
