net-mgmt/netbox: Create Django 4.2 consumers
* Django 3.2 is currently the "default" version in the ports tree due
  its long term support until April 2024.  Thus ports that are assigned
  to that version will exist until then.

The following ports are required to make the upgrade of
net-mgmt/netbox to the 3.6 release possible because it requires
Django 4.2.

All of the ports listed below were created on the basis of their
respective original ports:

- devel/py-dj42-django-rq
- devel/py-dj42-graphene-django
- www/py-dj42-django-auth-ldap
- www/py-dj42-django-cors-headers
- www/py-dj42-django-debug-toolbar
- www/py-dj42-django-filter
- www/py-dj42-django-graphiql-debug-toolbar
- www/py-dj42-django-js-asset
- www/py-dj42-django-mptt
- www/py-dj42-django-prometheus
- www/py-dj42-django-redis
- www/py-dj42-django-rich
- www/py-dj42-django-tables2
- www/py-dj42-django-taggit
- www/py-dj42-django-timezone-field
- www/py-dj42-djangorestframework
- www/py-dj42-drf-spectacular
- www/py-dj42-drf-spectacular-sidecar

Differential Revision:	https://reviews.freebsd.org/D41664

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -4595,6 +4595,8 @@
     SUBDIR += py-distributed
     SUBDIR += py-dj41-django-rq
     SUBDIR += py-dj41-graphene-django
+    SUBDIR += py-dj42-django-rq
+    SUBDIR += py-dj42-graphene-django
     SUBDIR += py-django-rq
     SUBDIR += py-dockerpty
     SUBDIR += py-docopt
