--- a/www/Makefile
+++ b/www/Makefile
@@ -1494,6 +1494,22 @@
     SUBDIR += py-dj41-drf-spectacular
     SUBDIR += py-dj41-drf-spectacular-sidecar
     SUBDIR += py-dj41-drf-yasg
+    SUBDIR += py-dj42-django-auth-ldap
+    SUBDIR += py-dj42-django-cors-headers
+    SUBDIR += py-dj42-django-debug-toolbar
+    SUBDIR += py-dj42-django-filter
+    SUBDIR += py-dj42-django-graphiql-debug-toolbar
+    SUBDIR += py-dj42-django-js-asset
+    SUBDIR += py-dj42-django-mptt
+    SUBDIR += py-dj42-django-prometheus
+    SUBDIR += py-dj42-django-redis
+    SUBDIR += py-dj42-django-rich
+    SUBDIR += py-dj42-django-tables2
+    SUBDIR += py-dj42-django-taggit
+    SUBDIR += py-dj42-django-timezone-field
+    SUBDIR += py-dj42-djangorestframework
+    SUBDIR += py-dj42-drf-spectacular
+    SUBDIR += py-dj42-drf-spectacular-sidecar
     SUBDIR += py-django-admin-rangefilter
     SUBDIR += py-django-advanced-filters
     SUBDIR += py-django-allauth
