devel/py-pylint-flask: Add py-pylint-flask 0.6
pylint-flask is Pylint plugin for improving code analysis when editing code
using Flask. It is inspired by pylint-django.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -5298,6 +5298,7 @@
     SUBDIR += py-pylev
     SUBDIR += py-pylibsrtp
     SUBDIR += py-pylint-django
+    SUBDIR += py-pylint-flask
     SUBDIR += py-pylint-plugin-utils
     SUBDIR += py-pylint-venv
     SUBDIR += py-pylru
